// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SpotlightModal/> should cancel previous request when tab is switched and not notify on cancellation error 1`] = `
[
  {
    "cancelToken": CancelToken {
      "promise": Promise {},
      "reason": Cancel {
        "message": undefined,
      },
    },
    "data": "{"search":"foo"}",
    "headers": {
      "Accept": "application/json, text/plain, */*",
      "Content-Type": "application/json;charset=utf-8",
      "X-CSRF-Token": "abcd",
      "X-Gorgias-User-Client": "web",
    },
    "maxBodyLength": -1,
    "maxContentLength": -1,
    "method": "post",
    "params": {
      "order_by": "_score:desc",
    },
    "timeout": 0,
    "transformRequest": [
      [Function],
    ],
    "transformResponse": [
      [Function],
    ],
    "url": "/api/customers/search",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
  {
    "cancelToken": CancelToken {
      "promise": Promise {},
    },
    "data": "{"search":"foo","filters":""}",
    "headers": {
      "Accept": "application/json, text/plain, */*",
      "Content-Type": "application/json;charset=utf-8",
      "X-CSRF-Token": "abcd",
      "X-Gorgias-User-Client": "web",
    },
    "maxBodyLength": -1,
    "maxContentLength": -1,
    "method": "post",
    "params": {},
    "timeout": 0,
    "transformRequest": [
      [Function],
    ],
    "transformResponse": [
      [Function],
    ],
    "url": "/api/tickets/search",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
]
`;

exports[`<SpotlightModal/> should fetch customers on enter keypress 1`] = `
[
  {
    "cancelToken": CancelToken {
      "promise": Promise {},
    },
    "data": "{"search":"foo2"}",
    "headers": {
      "Accept": "application/json, text/plain, */*",
      "Content-Type": "application/json;charset=utf-8",
      "X-CSRF-Token": "abcd",
      "X-Gorgias-User-Client": "web",
    },
    "maxBodyLength": -1,
    "maxContentLength": -1,
    "method": "post",
    "params": {
      "order_by": "_score:desc",
    },
    "timeout": 0,
    "transformRequest": [
      [Function],
    ],
    "transformResponse": [
      [Function],
    ],
    "url": "/api/customers/search",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
]
`;

exports[`<SpotlightModal/> should fetch customers on enter keypress from the old search endpoint  1`] = `
[
  {
    "cancelToken": CancelToken {
      "promise": Promise {},
    },
    "data": "{"view":{"search":"foo2","type":"customer-list"}}",
    "headers": {
      "Accept": "application/json, text/plain, */*",
      "Content-Type": "application/json;charset=utf-8",
      "X-CSRF-Token": "abcd",
      "X-Gorgias-User-Client": "web",
    },
    "maxBodyLength": -1,
    "maxContentLength": -1,
    "method": "put",
    "timeout": 0,
    "transformRequest": [
      [Function],
    ],
    "transformResponse": [
      [Function],
    ],
    "url": "/api/views/0/items/",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
]
`;

exports[`<SpotlightModal/> should fetch tickets on enter keypress from the new search endpoint when on the tickets tab 1`] = `
[
  {
    "cancelToken": CancelToken {
      "promise": Promise {},
    },
    "data": "{"search":"foo","filters":""}",
    "headers": {
      "Accept": "application/json, text/plain, */*",
      "Content-Type": "application/json;charset=utf-8",
      "X-CSRF-Token": "abcd",
      "X-Gorgias-User-Client": "web",
    },
    "maxBodyLength": -1,
    "maxContentLength": -1,
    "method": "post",
    "params": {},
    "timeout": 0,
    "transformRequest": [
      [Function],
    ],
    "transformResponse": [
      [Function],
    ],
    "url": "/api/tickets/search",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
]
`;

exports[`<SpotlightModal/> should fetch tickets on enter keypress from the old search endpoint if on the tickets tab 1`] = `
[
  {
    "cancelToken": CancelToken {
      "promise": Promise {},
    },
    "data": "{"view":{"search":"foo2","type":"ticket-list"}}",
    "headers": {
      "Accept": "application/json, text/plain, */*",
      "Content-Type": "application/json;charset=utf-8",
      "X-CSRF-Token": "abcd",
      "X-Gorgias-User-Client": "web",
    },
    "maxBodyLength": -1,
    "maxContentLength": -1,
    "method": "put",
    "timeout": 0,
    "transformRequest": [
      [Function],
    ],
    "transformResponse": [
      [Function],
    ],
    "url": "/api/views/0/items/",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
]
`;

exports[`<SpotlightModal/> should render the fetched result set with SpotlightRow for Customers tab 1`] = `
<div
  aria-describedby="modal-57-desc"
  aria-labelledby="modal-57-title"
  aria-modal="true"
  class="modal spotlightModal default open"
  role="dialog"
>
  <div
    class="dialog large scrollableDialog"
  >
    <div
      class="modalContent scrollableContent default spotlightModalContent"
    >
      <div
        class="component searchInput"
      >
        <div
          class="wrapper isFocused input textInput shortcuts-enable"
        >
          <span
            class="prefix"
          >
            <i
              class="material-icons icon"
            >
              search
            </i>
          </span>
          <input
            class="input"
            id="input-text-58"
            name="input-text-58"
            placeholder="Search..."
            type="text"
            value="foo"
          />
        </div>
      </div>
      <div
        class="container tabNavigator"
      >
        <div
          class="tabContainer"
        >
          <div
            class="tab activeTab"
            tabindex="1"
          >
            <span
              class="tabLabel"
            >
              Customers
            </span>
          </div>
          <div
            class="tab"
            tabindex="2"
          >
            <span
              class="tabLabel"
            >
              Tickets
            </span>
          </div>
        </div>
        <div
          class="activeIndicator"
          style="width: 0px; left: 0px;"
        />
      </div>
      <div
        class="wrapper scrollable modalBody"
        id="modal-57-desc"
      >
        <div>
          <div>
            SpotlightCustomerRow
          </div>
        </div>
      </div>
      <div
        class="wrapper footer"
      >
        <button
          class="wrapper ghost secondary small"
          type="button"
        >
          <span>
            Advanced Search
          </span>
          <div
            class="wrapper classic shortcut"
          >
            ⇧
          </div>
          <div
            class="wrapper classic shortcut"
          >
            ↩
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SpotlightModal/> should render the fetched result set with SpotlightRow for Tickets tab 1`] = `
<div
  aria-describedby="modal-55-desc"
  aria-labelledby="modal-55-title"
  aria-modal="true"
  class="modal spotlightModal default open"
  role="dialog"
>
  <div
    class="dialog large scrollableDialog"
  >
    <div
      class="modalContent scrollableContent default spotlightModalContent"
    >
      <div
        class="component searchInput"
      >
        <div
          class="wrapper isFocused input textInput shortcuts-enable"
        >
          <span
            class="prefix"
          >
            <i
              class="material-icons icon"
            >
              search
            </i>
          </span>
          <input
            class="input"
            id="input-text-56"
            name="input-text-56"
            placeholder="Search..."
            type="text"
            value="foo"
          />
        </div>
      </div>
      <div
        class="container tabNavigator"
      >
        <div
          class="tabContainer"
        >
          <div
            class="tab"
            tabindex="1"
          >
            <span
              class="tabLabel"
            >
              Customers
            </span>
          </div>
          <div
            class="tab activeTab"
            tabindex="2"
          >
            <span
              class="tabLabel"
            >
              Tickets
            </span>
          </div>
        </div>
        <div
          class="activeIndicator"
          style="width: 0px; left: 0px;"
        />
      </div>
      <div
        class="wrapper scrollable modalBody"
        id="modal-55-desc"
      >
        <div>
          <div>
            SpotlightTicketRow
          </div>
        </div>
      </div>
      <div
        class="wrapper footer"
      >
        <button
          class="wrapper ghost secondary small"
          type="button"
        >
          <span>
            Advanced Search
          </span>
          <div
            class="wrapper classic shortcut"
          >
            ⇧
          </div>
          <div
            class="wrapper classic shortcut"
          >
            ↩
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SpotlightModal/> should render with customer tab as default 1`] = `
<div
  aria-describedby="modal-1-desc"
  aria-labelledby="modal-1-title"
  aria-modal="true"
  class="modal spotlightModal default open"
  role="dialog"
>
  <div
    class="dialog large scrollableDialog"
  >
    <div
      class="modalContent scrollableContent default spotlightModalContent"
    >
      <div
        class="component searchInput"
      >
        <div
          class="wrapper input textInput shortcuts-enable"
        >
          <span
            class="prefix"
          >
            <i
              class="material-icons icon"
            >
              search
            </i>
          </span>
          <input
            class="input"
            id="input-text-2"
            name="input-text-2"
            placeholder="Search..."
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="container tabNavigator"
      >
        <div
          class="tabContainer"
        >
          <div
            class="tab activeTab"
            tabindex="1"
          >
            <span
              class="tabLabel"
            >
              Customers
            </span>
          </div>
          <div
            class="tab"
            tabindex="2"
          >
            <span
              class="tabLabel"
            >
              Tickets
            </span>
          </div>
        </div>
        <div
          class="activeIndicator"
          style="width: 0px; left: 0px;"
        />
      </div>
      <div
        class="wrapper footer cleanSearchFooter"
      >
        <button
          class="wrapper ghost secondary small"
          type="button"
        >
          <span>
            Advanced Search
          </span>
          <div
            class="wrapper classic shortcut"
          >
            ⇧
          </div>
          <div
            class="wrapper classic shortcut"
          >
            ↩
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SpotlightModal/> should reset search after closing and end previous searchRank scenario 1`] = `
<div
  aria-describedby="modal-59-desc"
  aria-labelledby="modal-59-title"
  aria-modal="true"
  class="modal spotlightModal default open"
  role="dialog"
>
  <div
    class="dialog large scrollableDialog"
  >
    <div
      class="modalContent scrollableContent default spotlightModalContent"
    >
      <div
        class="component searchInput"
      >
        <div
          class="wrapper isFocused input textInput shortcuts-enable"
        >
          <span
            class="prefix"
          >
            <i
              class="material-icons icon"
            >
              search
            </i>
          </span>
          <input
            class="input"
            id="input-text-60"
            name="input-text-60"
            placeholder="Search..."
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="container tabNavigator"
      >
        <div
          class="tabContainer"
        >
          <div
            class="tab activeTab"
            tabindex="1"
          >
            <span
              class="tabLabel"
            >
              Customers
            </span>
          </div>
          <div
            class="tab"
            tabindex="2"
          >
            <span
              class="tabLabel"
            >
              Tickets
            </span>
          </div>
        </div>
        <div
          class="activeIndicator"
          style="width: 0px; left: 0px;"
        />
      </div>
      <div
        class="wrapper footer cleanSearchFooter"
      >
        <button
          class="wrapper ghost secondary small"
          type="button"
        >
          <span>
            Advanced Search
          </span>
          <div
            class="wrapper classic shortcut"
          >
            ⇧
          </div>
          <div
            class="wrapper classic shortcut"
          >
            ↩
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SpotlightModal/> should set tickets tab on click 1`] = `
<div
  aria-describedby="modal-3-desc"
  aria-labelledby="modal-3-title"
  aria-modal="true"
  class="modal spotlightModal default open"
  role="dialog"
>
  <div
    class="dialog large scrollableDialog"
  >
    <div
      class="modalContent scrollableContent default spotlightModalContent"
    >
      <div
        class="component searchInput"
      >
        <div
          class="wrapper input textInput shortcuts-enable"
        >
          <span
            class="prefix"
          >
            <i
              class="material-icons icon"
            >
              search
            </i>
          </span>
          <input
            class="input"
            id="input-text-4"
            name="input-text-4"
            placeholder="Search..."
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="container tabNavigator"
      >
        <div
          class="tabContainer"
        >
          <div
            class="tab"
            tabindex="1"
          >
            <span
              class="tabLabel"
            >
              Customers
            </span>
          </div>
          <div
            class="tab activeTab"
            tabindex="2"
          >
            <span
              class="tabLabel"
            >
              Tickets
            </span>
          </div>
        </div>
        <div
          class="activeIndicator"
          style="width: 0px; left: 0px;"
        />
      </div>
      <div
        class="wrapper footer cleanSearchFooter"
      >
        <button
          class="wrapper ghost secondary small"
          type="button"
        >
          <span>
            Advanced Search
          </span>
          <div
            class="wrapper classic shortcut"
          >
            ⇧
          </div>
          <div
            class="wrapper classic shortcut"
          >
            ↩
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SpotlightModal/> should show SpotlightLoader component while results are fetched 1`] = `
<div
  aria-describedby="modal-47-desc"
  aria-labelledby="modal-47-title"
  aria-modal="true"
  class="modal spotlightModal default open"
  role="dialog"
>
  <div
    class="dialog large scrollableDialog"
  >
    <div
      class="modalContent scrollableContent default spotlightModalContent"
    >
      <div
        class="component searchInput"
      >
        <div
          class="wrapper isFocused input textInput shortcuts-enable"
        >
          <span
            class="prefix"
          >
            <i
              class="material-icons icon"
            >
              search
            </i>
          </span>
          <input
            class="input"
            id="input-text-48"
            name="input-text-48"
            placeholder="Search..."
            type="text"
            value="foo"
          />
        </div>
      </div>
      <div
        class="container tabNavigator"
      >
        <div
          class="tabContainer"
        >
          <div
            class="tab activeTab"
            tabindex="1"
          >
            <span
              class="tabLabel"
            >
              Customers
            </span>
          </div>
          <div
            class="tab"
            tabindex="2"
          >
            <span
              class="tabLabel"
            >
              Tickets
            </span>
          </div>
        </div>
        <div
          class="activeIndicator"
          style="width: 0px; left: 0px;"
        />
      </div>
      <div
        class="wrapper scrollable modalBody"
        id="modal-47-desc"
      >
        <div>
          SpotlightLoader
        </div>
      </div>
      <div
        class="wrapper footer"
      >
        <button
          class="wrapper ghost secondary small"
          type="button"
        >
          <span>
            Advanced Search
          </span>
          <div
            class="wrapper classic shortcut"
          >
            ⇧
          </div>
          <div
            class="wrapper classic shortcut"
          >
            ↩
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SpotlightModal/> should show SpotlightNoResults component when no results are available  1`] = `
<div
  aria-describedby="modal-49-desc"
  aria-labelledby="modal-49-title"
  aria-modal="true"
  class="modal spotlightModal default open"
  role="dialog"
>
  <div
    class="dialog large scrollableDialog"
  >
    <div
      class="modalContent scrollableContent default spotlightModalContent"
    >
      <div
        class="component searchInput"
      >
        <div
          class="wrapper isFocused input textInput shortcuts-enable"
        >
          <span
            class="prefix"
          >
            <i
              class="material-icons icon"
            >
              search
            </i>
          </span>
          <input
            class="input"
            id="input-text-50"
            name="input-text-50"
            placeholder="Search..."
            type="text"
            value="foo"
          />
        </div>
      </div>
      <div
        class="container tabNavigator"
      >
        <div
          class="tabContainer"
        >
          <div
            class="tab activeTab"
            tabindex="1"
          >
            <span
              class="tabLabel"
            >
              Customers
            </span>
          </div>
          <div
            class="tab"
            tabindex="2"
          >
            <span
              class="tabLabel"
            >
              Tickets
            </span>
          </div>
        </div>
        <div
          class="activeIndicator"
          style="width: 0px; left: 0px;"
        />
      </div>
      <div
        class="wrapper scrollable modalBody"
        id="modal-49-desc"
      >
        <div
          class="wrapper"
        >
          <div
            class="title"
          >
            No results
          </div>
          <div
            class="body"
          >
            You may want to try using different keywords or check for typos.
            <button
              class="advancedSearchCta"
            >
              Use advanced search
            </button>
          </div>
        </div>
      </div>
      <div
        class="wrapper footer"
      >
        <button
          class="wrapper ghost secondary small"
          type="button"
        >
          <span>
            Advanced Search
          </span>
          <div
            class="wrapper classic shortcut"
          >
            ⇧
          </div>
          <div
            class="wrapper classic shortcut"
          >
            ↩
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;
